--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,6 +45,22 @@ p {
     }
   }
 
+  &.cta-whatsapp {
+    display: none;
+  }
+
+  &-dark {
+    color: #fff;
+    background: #000;
+    border: 1px solid #000;
+
+    &:hover {
+      color: #fff;
+      text-decoration: none;
+      opacity: 0.8;
+    }
+  }
+
   &-outline-primary {
     background: #fff;
     color: $primary-color;
@@ -165,6 +181,72 @@ textarea.form-input {
     .price {
       font-size: 18px;
       font-weight: 600;
+    }
+  }
+}
+@media (min-width: 520px) and (max-width: 768px) {
+  #main-showcase {
+    .showcase-content {
+      .title {
+        font-size: 60px !important;
+      }
+
+      .see-menu-btn {
+        margin-right: 24px;
+      }
+    }
+  }
+
+  .cta-btn {
+    &.cta-whatsapp {
+      display: inline-block;
+    }
+  }
+
+  .step-card {
+    width: 50% !important;
+  }
+
+  .contact-form-card {
+    padding: 30px 40px !important;
+  }
+}
+
+@media (max-width: 520px) {
+  #main-showcase {
+    .showcase-content {
+      .title {
+        font-size: 40px !important;
+      }
+    }
+  }
+
+  .step-card {
+    width: 90% !important;
+  }
+
+  .contact-form-card {
+    padding: 20px !important;
+
+    .contact-form-title {
+      font-size: 16px !important;
+      font-weight: 500 !important;
+    }
+  }
+
+  .cta-btn {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+
+    &.cta-whatsapp {
+      display: inline-block;
+    }
+  }
+
+  .home-menu-card {
+    .cta-btn {
+      margin-bottom: 0 !important;
     }
   }
 }
