--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -177,9 +177,13 @@ textarea.form-input {
     }
 
     .desc {
+      line-height: 24px;
+      margin-bottom: 10px;
+    }
+
+    .delivery-time,
+    .desc {
       font-size: 14px;
-      line-height: 20px;
-      margin-bottom: 8px;
     }
 
     .price {
