--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,7 +9,7 @@ $secondary-color: #2d3e50;
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Inter', sans-serif;
   overflow-x: hidden;
 }
 
@@ -170,24 +170,34 @@ textarea.form-input {
   .info {
     background: #fff;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
-    padding: 10px;
+    padding: 24px;
+    position: relative;
 
     .title {
-      font-size: 16px;
+      font-size: 24px;
     }
 
     .desc {
       line-height: 24px;
-      margin-bottom: 10px;
+      margin-bottom: 16px;
     }
 
     .delivery-time,
     .desc {
-      font-size: 14px;
+      font-size: 16px;
+    }
+
+    .deals-btn {
+      padding: 4px;
+      bottom: 26px;
+      right: 18px;
+      border-radius: 4px;
+      position: absolute;
     }
 
     .price {
-      font-size: 18px;
+      margin-top: 14px;
+      font-size: 20px;
       font-weight: 600;
     }
   }
